--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
+    <string name="ga_trackingId" translatable="false">UA-105689678-1</string>
 
-</PreferenceScreen>
+</resources>
